[package]
name = "nighty_night"
version = "0.3.14"
authors = ["Jaime Alvarez <jaime.af.git@gmail.com>"]
description = "Axum backend with sessions."
readme = "README.md"
edition = "2021"
repository = "https://github.com/Jaime-alv/axum_demo"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.15"
hyper = { version = "0.14.26", features = ["full"] }
tokio = { version = "1.27.0", features = ["full"] }
tower = "0.4.13"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
diesel = {version = "*", features = ["postgres", "chrono"]}
dotenvy = "*"
# Debug info
axum-macros = "0.3.7"

bcrypt = "0.14"

# Tracing
tracing = "0.1.37"
tracing-subscriber = {version = "0.3.17"}
tower-http = { version = "0.4.0", features = ["trace"] }

# Session
axum_session = { version = "0.2.3", features = [ "redis-db" ] }
axum_session_auth = { version = "0.2.1", features = [ "redis-db" ] }
redis = { version = "0.23.0", features = ["tokio-comp", "json"] }
anyhow = "1.0.71"

# Time Management
chrono = "0.4.24"